--- a/alpine-3.5/Dockerfile
+++ b/alpine-3.5/Dockerfile
@@ -1,4 +1,4 @@
-FROM registry2.applifier.info:5005/ads-infra-kontrol-alpine-3.5
+FROM registry2.applifier.info:5005/ads-infra-kontrol-alpine-3.5:1.1
 
 ENV KONTROL_MODE=master,slave,verbose \
     KONTROL_PAYLOAD=/data/state.json \
@@ -11,9 +11,10 @@ ENV KONTROL_MODE=master,slave,verbose \
 
 ADD resources/ .
 RUN set -ex && \
-    apk upgrade --update && \
-    apk add --no-cache --virtual .build-deps ca-certificates gcc libc-dev linux-headers make openssl openssl-dev pcre-dev readline-dev tar zlib-dev iptables && \
-    wget -O lua.tar.gz "https://www.lua.org/ftp/lua-$LUA_VERSION.tar.gz" && \
+    apk add --no-cache iptables && \
+    apk add --no-cache --virtual .transient ca-certificates g++ libc-dev linux-headers make openssl openssl-dev pcre-dev readline-dev tar zlib-dev && \
+    pip install shell awscli && \
+	wget -O lua.tar.gz "https://www.lua.org/ftp/lua-$LUA_VERSION.tar.gz" && \
     echo "$LUA_SHA1 *lua.tar.gz" | sha1sum -c && \
     mkdir -p /usr/src/lua && \
     tar -xzf lua.tar.gz -C /usr/src/lua --strip-components=1 && \
@@ -21,39 +22,38 @@ RUN set -ex && \
     make -C /usr/src/lua -j "$(getconf _NPROCESSORS_ONLN)" linux && \
     make -C /usr/src/lua install \
       INSTALL_BIN='/usr/src/lua/trash/bin' \
-		  INSTALL_CMOD='/usr/src/lua/trash/cmod' \
-		  INSTALL_LMOD='/usr/src/lua/trash/lmod' \
-		  INSTALL_MAN='/usr/src/lua/trash/man' \
-          INSTALL_INC='/usr/local/lua-install/inc' \
-	  	  INSTALL_LIB='/usr/local/lua-install/lib' && \
+	  INSTALL_CMOD='/usr/src/lua/trash/cmod' \
+	  INSTALL_LMOD='/usr/src/lua/trash/lmod' \
+	  INSTALL_MAN='/usr/src/lua/trash/man' \
+      INSTALL_INC='/usr/local/lua-install/inc' \
+	  INSTALL_LIB='/usr/local/lua-install/lib' && \
     rm -rf /usr/src/lua && \
     wget -O haproxy.tar.gz "http://www.haproxy.org/download/${HAPROXY_MAJOR}/src/haproxy-${HAPROXY_VERSION}.tar.gz" && \
 	  echo "$HAPROXY_MD5 *haproxy.tar.gz" | md5sum -c && \
 	  mkdir -p /usr/src/haproxy && \
 	  tar -xzf haproxy.tar.gz -C /usr/src/haproxy --strip-components=1 && \
 	  rm haproxy.tar.gz && \
-	  makeOpts=' \
+	  options=' \
 		TARGET=linux2628 \
 		USE_LUA=1 LUA_INC=/usr/local/lua-install/inc LUA_LIB=/usr/local/lua-install/lib \
 		USE_OPENSSL=1 \
 		USE_PCRE=1 PCREDIR= \
 		USE_ZLIB=1 \
 	  ' && \
-	  make -C /usr/src/haproxy -j "$(getconf _NPROCESSORS_ONLN)" all $makeOpts && \
-	  make -C /usr/src/haproxy install-bin $makeOpts && \
+	  make -C /usr/src/haproxy -j "$(getconf _NPROCESSORS_ONLN)" all $options && \
+	  make -C /usr/src/haproxy install-bin $options && \
 	  rm -rf /usr/local/lua-install && \
 	  mkdir -p /usr/local/etc/haproxy && \
 	  cp -R /usr/src/haproxy/examples/errorfiles /usr/local/etc/haproxy/errors && \
 	  rm -rf /usr/src/haproxy && \
-	  runDeps="$( \
+	  extra="$( \
 		scanelf --needed --nobanner --recursive /usr/local \
 			| awk '{ gsub(/,/, "\nso:", $2); print "so:" $2 }' \
 			| sort -u \
 			| xargs -r apk info --installed \
 			| sort -u \
 	   )" &&\
-      apk add --virtual .haproxy-rundeps $runDeps && \
+      apk add $extra && \
 	  chmod +x wrapped.sh && \
-	  pip install shell awscli && \
-	  apk del .build-deps && \
-	  apk add iptables
+	  apk del .transient
+	  
