Fixed the lifecycle (wrong annotation parsing)

--- a/alpine-3.5/Dockerfile
+++ b/alpine-3.5/Dockerfile
@@ -1,6 +1,6 @@
-FROM registry2.applifier.info:5005/ads-infra-kontrol-alpine-3.5:1.1
+FROM registry2.applifier.info:5005/ads-infra-kontrol-alpine-3.5:1.0.0
 
-ENV KONTROL_MODE=master,slave,verbose \
+ENV KONTROL_MODE=master,slave \
     KONTROL_PAYLOAD=/data/state.json \
     KONTROL_CALLBACK="python /home/kontrol/callback.py" \
     HAPROXY_MAJOR=1.7 \
