--- a/resources/supervisor/local.conf
+++ b/resources/supervisor/local.conf
@@ -1,16 +1,35 @@
-[program:telegraf]
-command=/usr/bin/telegraf
-autostart=false
-
 [program:haproxy]
 command=/home/kontrol/wrapped.sh
 stopsignal=INT
 stopasgroup=true
 stopwaitsecs=60
 autostart=false
+autorestart=unexpected
+exitcodes=0
+
+[program:telegraf]
+command=/usr/bin/telegraf
+autostart=false
+autorestart=unexpected
+startretries=0
+exitcodes=0
 
 [program:automaton]
-command=automaton lifecycle.yml -d -s /tmp/sock
+command=/usr/bin/automaton /home/kontrol/lifecycle.yml -d -s /tmp/sock
 stopsignal=INT
 stopasgroup=true
 stopwaitsecs=60
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+autorestart=unexpected
+exitcodes=0
+
+[program:kontrol]
+command=/usr/bin/kontrol -d
+stopsignal=INT
+stopasgroup=true
+stopwaitsecs=60
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+autorestart=unexpected
+exitcodes=0
